This is a development build of the ARA Library 2.3.
=== PRELIMINARY - DO NOT USE FOR SHIPPING PRODUCTS! ===


Changes since previous releases:
- initial draft of generic ARA IPC library providing a proxy host and a proxy plug-in,
  based on heavily refactored IPC Example from earlier SDK releases


=== ARA SDK 2.2 release (aka 2.2.001) (2022/11/07) ===
- added surround support for audio sources
- added API to determine whether an audio modification actually modifies the underlying audio source
- implementation of assertion macros changed to be consistent void expressions
  Code like "if (ARA_SOME_ASSERT (someCall ()))" breaks when disabling asserts,
  so this change makes it impossible to write it.
- minor tweaks for full compatibility with recent C++ compilers (e.g. std::iterator, warnings, etc.)


=== ARA SDK 2.1 release (aka 2.1.001) (2022/01/06) ===
- finalized ARM support for Apple Silicon
- enable ARA audio file chunk authoring directly in the host


=== ARA SDK 2.0 release (aka 2.0.001) (2021/05/03) ===
- added matching object destruction customization function for all object creation functions
  This allows to use custom memory management, or to reuse already existing internal objects that
  can implement the interface for which an object is created.
- implemented reference counting for the document controller class in ARAPlug to ease dealing with
  destruction order between document controller and plug-in instances
  While the document is deleted immediately when the host destroys the controller, the controller
  itself will now be kept alive until all plug-in instances bound to it have been destroyed.
- changed default implementations of content getters for audio modifications and playback regions to
  require explicit override by user code: DocumentControllerDelegate::doIsAudioModificationContentAvailable (),
  doGetAudioModificationContentGrade (), doIsPlaybackRegionContentAvailable () and doGetPlaybackRegionContentGrade ()