@@ -22,7 +22,7 @@
 #include "ARA_Library/Debug/ARADebug.h"
 #include "ARA_Library/Dispatch/ARAPlugInDispatch.h"
 #include "ARA_Library/Dispatch/ARAContentReader.h"
-#include "ARA_Library/Utilities/ARAChannelArrangement.h"
+#include "ARA_Library/Utilities/ARAChannelFormat.h"
 #include "ARA_Library/Utilities/ARAStdVectorUtilities.h"
 #include "ARA_Library/Utilities/ARASamplePositionConversion.h"
 
@@ -464,7 +464,7 @@ protected:
     //! Since the channel arrangement is expressed in terms of the Companion API and not
     //! in some native ARA format, translating it into the plug-in's internal representation
     //! is delegated by the library via this call for clients to override as necessary.
-    virtual void doUpdateChannelArrangement (const ChannelArrangement& channelArrangement) noexcept {}
+    virtual void doUpdateChannelArrangement (const ChannelFormat& channelArrangement) noexcept {}
 
 public:
 //@}
